Removed deprecated APIs